# CropForge

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CropForge_PRD_v0.1_revised.txt  CropForge_PRD_v0.2.0.md  LICENSE  README.md  emoji_hits.txt  mid_season_export.glb  mkdocs.yml  pyproject.toml  wheat_trial_day15.glb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: publish.yml
cropforge/: __init__.py  compare.py  crop.py  environment.py  events.py  export_gltf.py  farm.py  land_prep.py  loaders.py  logger.py  models.py  plugins.py  runtime.py  state.py  terrain.py
cropforge/physics/: __init__.py  builtin_hooks.py  environment.py  hydrology.py  nutrients.py  pathology.py  radiation.py  soil.py  weeds.py  wind.py
cropforge/plugins/: __init__.py  maize.py  wheat.py
cropforge/viz/: __init__.py  app.py  buffers.py  registry.py  server.py
cropforge/viz/assets/: generate_stubs.py
cropforge/viz/assets/standard_maize/: stage_0_germination.gltf  stage_1_emergence.gltf  stage_2_veg_early.gltf  stage_3_veg_late.gltf  stage_4_anthesis.gltf  stage_5_grain_fill.gltf  stage_6_senescence.gltf
cropforge/viz/assets/standard_wheat/: stage_1_emergence.gltf  stage_2_tillering.gltf  stage_3_stem_ext.gltf  stage_4_anthesis.gltf  stage_5_grain_fill.gltf  stage_6_senescence.gltf
cropforge/viz/assets/weeds/: weed_broadleaf.glb  weed_grass.glb
cropforge/viz/static/: fallback.js  index.html  main.js  parent_sanitize.js
docs/: changelog.md  index.md  plugins.md  prd.md
docs/features/: physics.md  terrain.md  visual_engine.md
docs/getting_started/: installation.md  quickstart.md
docs/reference/: api.md  crop.md  events.md  farm.md  loaders.md  logger.md  runtime.md  state.md  viz.md
docs/tutorials/: 3d_assets_and_export.md  conservation_agriculture.md  disease_modeling.md  geomorphology.md  irrigation_and_leaching.md  irrigation_animation.md  maize_dual_plot.md  multi_season_rotation.md  planting_density.md  terrain_and_land_prep.md  weed_management.md
examples/: conservation_ag_trial.py  digital_twin_full_lifecycle.py  disease_outbreak_trial.py  geomorphology_tutorial.py  irrigation_trial.py  maize_dual_plot.py  maize_dual_plot_v2.py  pbr_gltf_trial.py  photorealistic_twin_trial.py  slope_leaching_trial.py  submetre_performance_trial.py  terraced_slope_trial.py  terrain_viz_trial.py  two_season_viz_trial.py  wheat_basic.py  wheat_basic_v2.py
examples/data/: maize_soil_plotA_slope.csv  maize_soil_plotB_hardpan.csv  maize_weather_90d.csv  wheat_synthetic_weather_90d.csv  wheat_uniform_soil_3layer.csv
tests/: test_compare.py  test_events.py  test_export_gltf.py  test_farm.py  test_integration_physics.py  test_integration_spatial.py  test_loaders.py  test_logger.py  test_logger_observables.py  test_maize_scenario.py  test_modifiers_land_prep.py  test_multiseason.py  test_physics_advanced_landprep.py  test_physics_clods.py  test_physics_d8_coupling.py  test_physics_disease.py  test_physics_env.py  test_physics_erosion.py  test_physics_geomorphology.py  test_physics_hydrology.py  test_physics_nutrients.py  test_physics_radiation.py  test_physics_radiation_topo.py  test_physics_resolution.py  test_physics_roots_topo.py  test_physics_sediment.py  test_physics_soil.py  test_physics_weeds.py  test_physics_wind_topo.py  test_plugins.py  test_runtime.py  test_standard_plugins.py  test_state.py  test_topography.py  test_v1_irrigation_visuals.py  test_v1_yield_density.py  test_viz_buffer.py  test_viz_first_party_assets.py  test_viz_machinery.py  test_viz_morphing.py  (+4 more)
tests/assets/: dummy_plant.gltf
